<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sharedrenferenceactivity"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/referenceinput" />

        <Button
            android:id="@+id/buttonGet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/referenceget" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>